--- a/templates/index.html
+++ b/templates/index.html
@@ -17,15 +17,14 @@
 
 
 <body>
-    <h1>Covid Stats!</h1><br>
-    <form method="POST">
-        <label >Enter a Country Code</label><br><br>
-    <input placeholder="Country Code" name="text">
-    <input type="submit">
-</form>
+    <h1>Covid stats</h1>
+    <form methord='POST'>
+    	<label>Enter a Country Code</label><br><br>
+    	<input placeholder="Country Code" name="text">
+    	<input type="submit">
+    </form>
     <img src="{{image }}">
 
-
-    <p>You have {{ count }} Visitors.</p>
+    <p>You have {{count}} Visitors.</p>
 </body>
 </html>
