--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <h1>Covid stats</h1>
-    <form methord='POST'>
+    <form method='POST'>
     	<label>Enter a Country Code</label><br><br>
     	<input placeholder="Country Code" name="text">
     	<input type="submit">
